--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ h1{
     align-items: center;
     position: relative;
     top: -450px;
-    right: -800px
+    right: -800px;
 }
 #img_c_holder{
     align-items: center;
