--- a/style.css
+++ b/style.css
@@ -51,6 +51,6 @@ a{
     text-decoration: none;
     padding: 8px 12px;
     background-color: black;
-    font-size: 2em;
+    font-size: 70px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
